--- a/tmpl/login.tmpl
+++ b/tmpl/login.tmpl
@@ -4,12 +4,11 @@
     <meta charset="utf-8">
     <title>Twitter</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap-theme.min.css">
     <link rel="stylesheet" href="../tmpl/css/twitter.css">
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
   </head>
 
   <body>
@@ -21,17 +20,17 @@
             <div class="panel-heading">ログインしてください</div>
             <div class="panel-body">
               <form method="POST" action="login.cgi">
-                <div class="form-group has-error">
+                <div id="mailForm" class="form-group has-error">
                   <label class="control-label" for="emailInput">メールアドレス</label>
                   <input type="email" name="name" class="form-control" id="emailInput" placeholder="xxx@xxx.com">
-                  <p class="help-block">メールアドレスを入力してください。</p>
-                  <p><font color="red"><strong><TMPL_VAR NAME="InvalidUserNameMessage"></strong></font></p>
+                  <p id="mailFormWarn" class="help-block">メールアドレスを入力してください。</p>
+                  <div class="form-group has-error"><p class="help-block"><strong><TMPL_VAR NAME="InvalidUserNameMessage"></strong></p></div>
                 </div>
                 <div class="form-group">
                   <label class="control-label" for="emailPassword">パスワード</label>
                   <input type="password" name="password" class="form-control" id="emailPassword" placeholder="">
-                  <p><font color="red"><strong><TMPL_VAR NAME="InvalidUserPasswordMessage"></strong></font></p>
-                  <p><font color="red"><strong><TMPL_VAR NAME="FaildLoginMessage"></strong></font></p>
+                  <div class="form-group has-error"><p class="help-block"><TMPL_VAR NAME="InvalidUserPasswordMessage"></p></div>
+                  <div class="form-group has-error"><p class="help-block"><strong><TMPL_VAR NAME="FaildLoginMessage"></strong></p></div>
                 </div>
                 <div class="form-group">
                   <button type="submit" class="btn btn-primary">ログイン</button>
@@ -43,5 +42,17 @@
       </div>
 
     </div>
+    <script type="text/javascript">
+      $("#emailInput").focusin(function(){
+        $("#mailFormWarn").hide();
+        $("div[id='mailForm']").removeClass("has-error");
+      });
+      $("#emailInput").focusout(function(){
+        if($(this).val() == ""){
+          $("div[id='mailForm']").addClass("has-error");
+          $("#mailFormWarn").show();
+        }
+      });
+    </script>
   </body>
 </html>
