[add] ユーザーページの追加

--- a/tmpl/userpage.tmpl
+++ b/tmpl/userpage.tmpl
@@ -25,36 +25,17 @@
     <div class="container-fluid container-with-header">
       <div class="row">
         <div class="col-md-offset-1 col-md-3 sidebar">
-          <!-- 投稿機能 -->
-          <div class="panel panel-default">
+          <!-- ユーザーページ -->
+          <div class="panel panel-success">
+            <div class="panel-heading"><strong>aaa@bbb.com</strong></div>
             <div class="panel-body">
-              <form method="POST" action="tweet.cgi">
-                <div class="form-group has-error">
-                  <textarea class="form-control" name="plain_tweet" placeholder="いまどうしてる？"></textarea>
-                  <p class="help-block">140文字以内で入力してください。</p>
-                </div>
-                <div class="form-group">
-                  <button type="submit" class="btn btn-default">ツイート</button>
-                </div>
-              </form>
+              <dl>
+                <dt>投稿数</dt><dd>20</dd>
+              </dl>
             </div>
           </div>
-          <!-- /投稿機能 -->
+          <!-- /ユーザーページ -->
 
-          <!-- 検索機能 -->
-          <div class="panel panel-default">
-            <div class="panel-body">
-              <form>
-                <div class="input-group">
-                  <input type="text" class="form-control" placeholder="Twitterを検索">
-                  <span class="input-group-btn">
-                    <button class="btn btn-default" type="submit"><span class="glyphicon glyphicon-search"></span></button>
-                  </span>
-                </div>
-              </form>
-            </div>
-          </div>
-          <!-- /検索機能 -->
         </div><!-- /.sidebar -->
 
         <div class="col-md-7">
