--- a/tmpl/mainpage.tmpl
+++ b/tmpl/mainpage.tmpl
@@ -17,7 +17,7 @@
     <nav class="navbar navbar-default navbar-fixed-top">
       <div class="container">
         <div class="navbar-header">
-            <a class="navbar-brand" href="/"><span class="glyphicon glyphicon-home"></span></a>
+            <a class="navbar-brand" href="mainpage.cgi"><span class="glyphicon glyphicon-home"></span></a>
         </div>
       </div>
     </nav>
