[update] ユーザープロフィールを実装

--- a/tmpl/userpage.tmpl
+++ b/tmpl/userpage.tmpl
@@ -27,10 +27,10 @@
         <div class="col-md-offset-1 col-md-3 sidebar">
           <!-- ユーザーページ -->
           <div class="panel panel-success">
-            <div class="panel-heading"><strong>aaa@bbb.com</strong></div>
+            <div class="panel-heading"><strong><TMPL_VAR NAME="USER_ID"></strong></div>
             <div class="panel-body">
               <dl>
-                <dt>投稿数</dt><dd>20</dd>
+                <dt>投稿数</dt><dd><TMPL_VAR NAME="POST_COUNT"></dd>
               </dl>
             </div>
           </div>
