--- a/tmpl/searchpage.tmpl
+++ b/tmpl/searchpage.tmpl
@@ -25,12 +25,13 @@
     <div class="container-fluid container-with-header">
       <div class="row">
         <div class="col-md-offset-1 col-md-3 sidebar">
-          <!-- 検索機能 -->
+          <!-- 検索結果 -->
           <div class="panel panel-default">
+            <div class="panel-heading"><TMPL_VAR NAME="SEARCH_RESULT_AREA"></div>
             <div class="panel-body">
-              <form method="POST" action="searchpage.cgi">
+              <form>
                 <div class="input-group">
-                  <input type="text" name="text" class="form-control" placeholder="Twitterを検索">
+                  <TMPL_VAR NAME="SEARCH_TEXT_INPUT_TAG">
                   <span class="input-group-btn">
                     <button class="btn btn-default" type="submit"><span class="glyphicon glyphicon-search"></span></button>
                   </span>
@@ -38,7 +39,7 @@
               </form>
             </div>
           </div>
-          <!-- /検索機能 -->
+          <!-- /検索結果 -->
 
         </div><!-- /.sidebar -->
 
