--- a/tmpl/mainpage.tmpl
+++ b/tmpl/mainpage.tmpl
@@ -28,13 +28,14 @@
           <!-- 投稿機能 -->
           <div class="panel panel-default">
             <div class="panel-body">
-              <form method="POST" action="tweet.cgi">
+              <form method="POST" action="tweet.cgi" enctype="multipart/form-data">
                 <TMPL_IF NAME="IS_TWEET_ERROR">
                 <div class="form-group has-error">
                 <TMPL_ELSE>
                 <div class="form-group">
                 </TMPL_IF>
                   <textarea class="form-control" name="plain_tweet" placeholder="いまどうしてる？"></textarea>
+                  <input class="file" type="file" name="pic">
                   <p class="help-block"><strong><TMPL_VAR NAME="InvalidTweetMessage"></strong></p>
                 </div>
                 <div class="form-group">
