[update] イメージのサイズがぴったりになるように修正

--- a/tmpl/timeline.tmpl
+++ b/tmpl/timeline.tmpl
@@ -7,7 +7,7 @@
     </div>
     <div class="panel-body">
       <p><TMPL_VAR NAME = "TEXT"></p>
-      <p><img src="<TMPL_VAR NAME = "PIC">"></p>
+      <p><img class="img-responsive" src="<TMPL_VAR NAME = "PIC">"></p>
       <h6 class="text-muted"><TMPL_VAR NAME = "TIME"></h6>
     </div>
   </div>
