--- a/tmpl/login.tmpl
+++ b/tmpl/login.tmpl
@@ -35,7 +35,7 @@
                 <div class="form-group">
                 </TMPL_IF>
                   <label class="control-label" for="emailPassword">パスワード</label>
-                  <input type="password" name="password" class="form-control" id="emailPassword" placeholder="8文字以上128文字以内の半角英数記号">
+                  <input type="password" name="password" class="form-control" id="emailPassword" placeholder="">
                   <div class="form-group"><p class="help-block"><strong><TMPL_VAR NAME="InvalidUserPasswordMessage"></strong></p></div>
                   <div class="form-group"><p class="help-block"><strong><TMPL_VAR NAME="FaildLoginMessage"></strong></p></div>
                 </div>
