--- a/tmpl/timeline.tmpl
+++ b/tmpl/timeline.tmpl
@@ -2,6 +2,7 @@
 <TMPL_LOOP NAME = "TIMELINE_LOOP">
   <div class="panel panel-info tweets">
     <div class="panel-heading">
+      <img style="max-width:50px;max-height:50px;" src="<TMPL_VAR NAME = "ICON">">
       <TMPL_VAR NAME = "USER_HREF">
       <TMPL_VAR NAME = "ERASE_TWEET_ZONE">
     </div>
